tests/files/parser_tests/should_fail/001.cmdr
// This should fail because the float is not formatted correctly
bigNumber = .5;